mediabackups (0.1.3) bullseye; urgency=medium

  * Make delete-media-file be on dry-run mode by default,
    require --execute parameter to actually delete a file
  * Make sure each cli command logs on a separate file

 -- jynus <jcrespo@wikimedia.org>  Wed, 29 Jun 2022 13:03:25 +0200

mediabackups (0.1.2) bullseye; urgency=medium
  * Add new scripts to query and delete existing backups (T311215)
  * Additional unit tests
  * Added support to update mysql metadata (EXPERIMENTAL)

 -- jynus <jcrespo@wikimedia.org>  Tue, 28 Jun 2022 13:44:49 +0100

mediabackups (0.1.1) bullseye; urgency=medium

  * Added support for update-mysql-metadata, which for now only
    adds newly added files, without updating the metadata of
    existing files

 -- Jaime Crespo <jcrespo@wikimedia.org>  Wed, 23 Mar 2022 18:16:50 +0100

mediabackups (0.1) bullseye; urgency=medium

  * Initial release.

 -- Jaime Crespo <jcrespo@wikimedia.org>  Tue, 22 Mar 2022 13:53:35 +0100